--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,34 @@
-body {
-    background-color: pink;
+/*------------------------------------------------------Google Font*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap');
+
+/*------------------------------------------------------Basic Structure Styling*/
+html {
+    height: 100%;
 }
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    color:#000000;
+    background: #ffffff;
+    font-size: 1rem;
+    top: 0 !important;
+    height: 100%;
+}
+
+main {
+    padding-top: 60px;
+    min-height: 100%;
+}
+
+a, a:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    margin-bottom: 0;
+}
+
+/*------------------------------------------------------Site Header*/
+
