--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
             <div id="site-header-collapsible-navbar" class="navbar-collapse collapse">
                 <ul class="site-header__navbar">
-                     <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">Vodka</a></li>
                     <li><a href="#">Whiskey</a></li>
                     <li><a href="#">Gin</a></li>
@@ -43,6 +43,56 @@
     {% block content %}
     {% endblock %}
     </main>
+    <!--Footer-->
+    <footer class="footer">
+        <div class="footer_container row">
+            <!--Site Map-->
+            <div class="col-3">
+                <h4>Site Map</h4>
+                <ul class="footer_list">
+                    <li><a href="#"><i class="fas fa-search"></i> Search</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Vodka</a></li>
+                    <li><a href="#">Whiskey</a></li>
+                    <li><a href="#">Gin</a></li>
+                    <li><a href="#">Rum</a></li>
+                    <li><a href="#">Tequila</a></li>
+                </ul>
+            </div>
+             <!--Account-->
+            <div class="col-3">
+                <h4>Account</h4>
+                <ul class="footer_list">
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Register</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Logout</a></li>
+                </ul>
+            </div>
+            <!--Referral Links-->
+            <div class="col-3">
+                <div class="bottom-mar">
+                    <h4>Get What You Need</h4>
+                    <p>Find a wide range of alcohol and mixers here:</p>
+                    <a class="bottom-mar" href="#">www.website.com</a>
+                </div>
+                <div>
+                <p>Grab all the tools you need:</p>
+                <a href="#">www.website.com</a>
+                </div>
+            </div>
+            <!--Social-->
+            <div class="col-3">
+                <h4>Find Us On</h4>
+                <ul class="footer_social footer_list">
+                    <li><a href="https://www.facebook.com/" target="_blank" aria-label="open our facebook page"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.youtube.com/" target="_blank" aria-label="open our youtube page"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="https://www.twitter.com/" target="_blank" aria-label="open our twitter page"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank" aria-label="open our instagram page"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <!--JQuery-->
     <script defer src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <!--Bootstrap JS-->
