--- a/templates/home.html
+++ b/templates/home.html
@@ -13,29 +13,38 @@
         </div>
     </section>
     <section class="rec-carsousel">
-        <h2 class="rec-carsousel_title">Newly Added</h2>
+        <div class="rec-carsousel_header">
+            <h2 class="rec-carsousel_title inline-block">Newly Added</h2>
+            <!-- If we need pagination -->
+        <div class="swiper-pagination inline-block"></div>
+        </div>
         <hr class="rec-carsousel_page-line page-line page-line--brand">
-        {% for tail in cocktails %}
-        <div class="rec-card">
-            <div class="row">
-                <div class="rec-card_col rec-card_col--left col-7">
-                    <img class="rec-card_img card-img" src="static/images/bramble.jpg" alt="#">
-                </div>
-                <div class="rec-card_col rec-card_col--right col-5">
-                    <div class="card-body">
+        <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                {% for tail in cocktails %}
+                <div class="rec-card card swiper-slide">
+                    <img class="rec-card_img card-img-top" src="static/images/pornstar.jpg" alt="#">
+                    <div class="rec-card_info card-body">
                         <h5 class="rec-card_title">{{ tail.cocktail_name }}</h5>
-                            <p class="card-rating">
+                        <div class="row">
+                            <div class="rec-card_star-rating col-6">
                                 {%  for i in range (0, tail.rating) %}
                                     <i class="fas fa-star"></i>
                                 {% endfor %}
-                            </p>
-                        <p class="card-text">{{ tail.alcohol }} Based</p>
-                        <p class="card-text"><strong>No. of Steps:</strong> {{ tail.number_of_steps }}</p>
-                        <a href="#" class="card-cta cta btn btn-primary">Make It!</a>
+                            </div>
+                            <div class="rec-card_col col-6">
+                                <a href="#" class="rec-card_cta cta">Make It</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
+            <!-- If we need navigation buttons -->
+            <div class="rec-carsousel_swiper-button swiper-button-prev"></div>
+            <div class="rec-carsousel_swiper-button swiper-button-next"></div>
         </div>
-        {% endfor %}
     </section>
 {% endblock %}
