--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,7 +102,8 @@ ul {
     position: fixed;
     color: white;
     filter: drop-shadow(0px 0px 5px #000000);
-    padding: 10px 45px 10px 30px;
+    padding: 10px 45px;
+    z-index: 100;
 }
 
 .logo {
