Link site header navbar to template pages that renders based on the link
The url of the page is produced for the link clicked the navbar.
The page h1 of the page is also rendered to match that of the url.
Currently the record that is indexed when the link is clicked is
rendered underneath the hero image this is to be removed before the
deployment.

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,10 @@
 
             <div id="site-header-collapsible-navbar" class="navbar-collapse collapse">
                 <ul class="site-header__navbar">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Vodka</a></li>
-                    <li><a href="#">Whiskey</a></li>
-                    <li><a href="#">Gin</a></li>
-                    <li><a href="#">Rum</a></li>
-                    <li><a href="#">Tequila</a></li>
+                    <li><a href="{{ url_for('home') }}" class="active">Home</a></li>
+                    {% for alcohol in alcohol_categories %}
+                        <li><a href="{{ url_for('category', alcohol_name=alcohol.alcohol_name) }}">{{ alcohol.alcohol_name }}</a></li>
+                    {% endfor %}
                 </ul>
                 <a class="btn-icon" href="#"><i class="fas fa-search"></i></a>
                 <a class="btn-icon" href="#"><i class="fas fa-user-circle"></i></a>
