--- a/static/css/style.css
+++ b/static/css/style.css
@@ -148,6 +148,14 @@ ul {
     background-attachment: fixed;
 }
 
+.hero__categ-name {
+    position: absolute;
+    left: 5%;
+    top: 15%;
+    color: white;
+    font-size: 9rem;
+}
+
 .hero-inner {
     color: #ffffff;
     position: absolute;
