Add site header navbar active class toggle
Gives the user an indicator which page or category they are on/in.
Switches the active class between the links when clicked even after
reload.
Still need to put in place a function to set the active class on the
initial landing page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,8 +128,8 @@ ul {
 .site-header__navbar a:hover,
 .site-header__navbar a:active,
 .site-header__navbar .active {
-    border-bottom: 2px solid;
-    border-color: white;
+    border-bottom: 3px solid;
+    border-color: var(--brand-cta);
 }
 
 /*------------------------------------------------------Hero Image-- */
