--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,6 +132,43 @@ ul {
     border-color: var(--brand-cta);
 }
 
+/*--Profile Dropdown--*/
+.nav-dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.nav-dropdown_menu {
+  display: none;
+  position: absolute;
+  left: -50%;
+  text-align: center;
+  background-color: var(--brand-color);
+  border-radius: 10px;
+  z-index: 120;
+}
+
+.nav-dropdown_menu-item {
+  color: white;
+  padding: 12px 16px;
+  display: block;
+}
+
+.nav-dropdown_menu-item:hover {
+    color: white;
+    background-color: var(--brand-cta);
+    border-radius: 10px;
+}
+
+.nav-dropdown:hover .nav-dropdown_menu {
+    display: block;
+}
+
+.nav-dropdown:hover {
+    color: var(--brand-cta);
+}
+
+
 /*------------------------------------------------------Hero Image-- */
 .hero {
     width: 100%;
