Add and style login and sign up pages
Form functionality has not been added in the commit.

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,8 @@
                         <a href="#" class="nav-dropdown_menu-item">Login</a>
                     </div>
                 </div>
-                <a class="cta" href="#">Register</a>
+                <a class="btn-icon nav-item" href="{{ url_for('login') }}"><i class="fas fa-sign-in-alt"></i></a>
+                <a class="cta" href="{{ url_for('register') }}">Register</a>
             </div>
         </nav>
     </header>
