--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,10 +52,18 @@ ul {
     display: inline-block;
 }
 
+.center-text {
+    text-align: center;
+}
+
 /*---------------------------Brand Colours--*/
 :root {
     --brand-color: purple;
     --brand-cta: orange;
+}
+
+.brand-color {
+    color: var(--brand-color);
 }
 
 /*---------------------------Page Lines--*/
@@ -88,6 +96,14 @@ ul {
     font-weight: 700;
     padding: 10px 15px;
     border-radius: 6px;
+}
+
+.cta--form {
+    border: none;
+    margin: 35px auto;
+    width: 50%;
+    padding: 20px 15px;
+    font-size: 1.25rem;
 }
 
 .btn-icon {
@@ -134,24 +150,24 @@ ul {
 
 /*--Profile Dropdown--*/
 .nav-dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 .nav-dropdown_menu {
-  display: none;
-  position: absolute;
-  left: -50%;
-  text-align: center;
-  background-color: var(--brand-color);
-  border-radius: 10px;
-  z-index: 120;
+    display: none;
+    position: absolute;
+    left: -50%;
+    text-align: center;
+    background-color: var(--brand-color);
+    border-radius: 10px;
+    z-index: 120;
 }
 
 .nav-dropdown_menu-item {
-  color: white;
-  padding: 12px 16px;
-  display: block;
+    color: white;
+    padding: 12px 16px;
+    display: block;
 }
 
 .nav-dropdown_menu-item:hover {
@@ -167,7 +183,22 @@ ul {
 .nav-dropdown:hover {
     color: var(--brand-cta);
 }
+/*------------------------------------------------------Page--*/
+.center-page {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 
+.page-title {
+    text-align: center;
+}
+
+.page-tagline {
+    font-size: 1.5rem;
+    padding-top: 20px;;
+}
 
 /*------------------------------------------------------Hero Image-- */
 .hero {
@@ -231,6 +262,36 @@ ul {
     display: inline-block;
     background-color: limegreen;
     color: white;
+}
+
+/*------------------------------------------------------Form--*/
+.form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.form_label,
+.form_input {
+    width: 100%;
+}
+
+.form_input {
+    display: block;
+    border: 2px solid var(--brand-color);
+    border-radius: 5px;
+    padding-left: 15px;
+    height: 50px;
+}
+
+.form_label {
+    margin: 35px 0 15px 15px;
+    font-weight: 700;
+}
+
+.form-input-info {
+    float: right;
+    font-weight: 300;
+    margin-right: 30px;
 }
 
 /*------------------------------------------------------Recipe Carsousel--*/
