--- a/templates/register.html
+++ b/templates/register.html
@@ -6,14 +6,14 @@
     <form id="login-form" class="form" action="#" target="_blank" method="post">
         <div class="row">
             <div class="col-12">
-                <label for="signup-username" class="form_label">Username <span class="form-input-info">Max 25 characters.</span></label>
-                <input type="text" name="signup-username" class="form_input" id="signup-username" placeholder="examplebartender" maxlength="25" required>
+                <label for="signup-username" class="form__label">Username <span class="form__input-info">Max 12 characters.</span></label>
+                <input type="text" name="signup-username" class="form__input" id="signup-username" placeholder="examplebartender" maxlength="12" required>
             </div>
             <div class="col-12">
-                <label for="signup-password" class="form_label">Password <span class="form-input-info">No specail characters.</span></label>
-                <input type="passsword" name="signup-password" class="form_input" id="signup-password" placeholder="Type your passsword here" maxlength="25" required>
-                <label for="confirm-password" class="form_label">Confirm Password</label>
-                <input type="passsword" name="confirm-password" class="form_input" id="confirm-password" placeholder="Make sure it matches" maxlength="25" required>
+                <label for="signup-password" class="form__label">Password <span class="form__input-info">No specail characters.</span></label>
+                <input type="passsword" name="signup-password" class="form__input" id="signup-password" placeholder="Type your passsword here" maxlength="25" required>
+                <label for="confirm-password" class="form__label">Confirm Password</label>
+                <input type="passsword" name="confirm-password" class="form__input" id="confirm-password" placeholder="Make sure it matches" maxlength="25" required>
             </div>
             <input type="submit" class="cta cta--form" id="signup-submit" value="Sign Up" aria-label="sign up button">
         </div>  
