--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,7 +172,7 @@ ul {
     display: inline-block;
 }
 
-.nav-dropdown_menu {
+.nav-dropdown__menu {
     display: none;
     position: absolute;
     left: -50%;
@@ -182,19 +182,19 @@ ul {
     z-index: 120;
 }
 
-.nav-dropdown_menu-item {
+.nav-dropdown__menu-item {
     color: white;
     padding: 12px 16px;
     display: block;
 }
 
-.nav-dropdown_menu-item:hover {
+.nav-dropdown__menu-item:hover {
     color: white;
     background-color: var(--brand-cta);
     border-radius: 10px;
 }
 
-.nav-dropdown:hover .nav-dropdown_menu {
+.nav-dropdown:hover .nav-dropdown__menu {
     display: block;
 }
 
@@ -247,7 +247,7 @@ ul {
     font-size: 9rem;
 }
 
-.hero-inner {
+.hero__inner {
     color: #ffffff;
     position: absolute;
     left: 5%;
@@ -293,12 +293,12 @@ ul {
     margin: 0 auto;
 }
 
-.form_label,
-.form_input {
+.form__label,
+.form__input {
     width: 100%;
 }
 
-.form_input {
+.form__input {
     display: block;
     border: 2px solid var(--brand-color);
     border-radius: 5px;
@@ -306,12 +306,12 @@ ul {
     height: 50px;
 }
 
-.form_label {
+.form__label {
     margin: 35px 0 15px 15px;
     font-weight: 700;
 }
 
-.form-input-info {
+.form__input-info {
     float: right;
     font-weight: 300;
     margin-right: 30px;
@@ -323,7 +323,7 @@ ul {
     position: relative;
 }
 
-.rec-carsousel_header {
+.rec-carsousel__header {
     position: relative;
     width: 100%;
 }
@@ -334,7 +334,7 @@ ul {
     top: 7.5px;
 }
 
-.rec-carsousel_title {
+.rec-carsousel__title {
     font-family: 'Playfair Display', serif;
     font-weight: 800;
     font-size: 3rem;
@@ -342,11 +342,11 @@ ul {
     color: purple;
 }
 
-.rec-carsousel_page-line {
+.rec-carsousel__page-line {
     margin: 0 0 20px 0;
 }
 
-.rec-carsousel_swiper-button {
+.rec-carsousel__swiper-button {
     height: 101%;
     width: 150px;
     top: 64%;
@@ -417,43 +417,43 @@ ul {
     border-radius: 7.5px;
 }
 
-.rec-card_container {
+.rec-card__container {
     margin: 0;
 }
 
-.rec-card_item {
+.rec-card__item {
     padding: 0;
 }
 
-.rec-card_title {
+.rec-card__title {
     font-size: 2rem;
 }
 
-.rec-card_img {
+.rec-card__img {
    height: 245px;
    width: 100%;
    border-top-left-radius: 7.5px;
    border-top-right-radius: 7.5px;
 }
 
-.rec-card_info {
+.rec-card__info {
     width: 100%;
     padding: 20px 15px;
 }
 
-.rec-card_info p{
+.rec-card__info p{
     margin: 10px 0;
 }
 
-.rec-card_star-rating {
+.rec-card__star-rating {
     font-size: 1.5rem;
 }
 
-.rec-card_col {
+.rec-card__col {
     text-align: right;
 }
 
-.rec-card_cta {
+.rec-card__cta {
     font-size: 1.5rem;
 }
 /*------------------------------------------------------Profile--*/
@@ -468,16 +468,16 @@ ul {
     overflow: hidden;
 }
 
-.profile__img {
-    width: 300px;
-    height: 300px;
-}
-
 .profile__container--text {
     text-align: left;
     position: relative;
     bottom: -20px;
     margin-left: 50px;
+}
+
+.profile__img {
+    width: 300px;
+    height: 300px;
 }
 
 .profile__name {
@@ -493,25 +493,25 @@ ul {
 }
 
 /*------------------------------------------------------Footer--*/
-.footer{
+.footer {
     background-color: #383838;
     color: white;
 }
 
-.footer_container {
+.footer__container {
     padding: 30px;
     width: 100%;;
 }
 
-.footer_list {
+.footer__list {
     list-style-type: none;
     padding: 0;
 }
 
-.footer_social {
+.footer__social {
     font-size: 4rem;
 }
 
-.footer_social li {
+.footer__social li {
     display: inline;
 }
