--- a/templates/category.html
+++ b/templates/category.html
@@ -4,7 +4,7 @@
     <section class="hero">
         <div class="hero__image">
             <h1 class="hero__categ-name">{{ alcohol.alcohol_name}}</h1>
-            <div class="hero-inner">
+            <div class="hero__inner">
                 <h1 class="hero__title">Cocktail of the Week</h1>
                 <h2 class="hero__cocktail">Bramble</h2>
                 <hr class="hero__page-line page-line page-line--brand page-line--left">
@@ -13,31 +13,30 @@
             </div>
         </div>
     </section>
-    {{ alcohol }}
+    {{ alcohol }} <!--Delete Before Depolyment-->
     <section class="rec-carsousel">
-        <div class="rec-carsousel_header">
-            <h2 class="rec-carsousel_title inline-block">Newly Added</h2>
-            <!-- If we need pagination -->
+        <div class="rec-carsousel__header">
+            <h2 class="rec-carsousel__title inline-block">Newly Added</h2>
+            <!--Pagination-->
         <div class="swiper-pagination inline-block"></div>
         </div>
-        <hr class="rec-carsousel_page-line page-line page-line--brand">
+        <hr class="rec-carsousel__page-line page-line page-line--brand">
         <div class="swiper-container">
-            <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
                 {% for tail in cocktails %}
                 <div class="rec-card card swiper-slide">
-                    <img class="rec-card_img card-img-top" src="static/images/pornstar.jpg" alt="#">
-                    <div class="rec-card_info card-body">
-                        <h5 class="rec-card_title">{{ tail.cocktail_name }}</h5>
+                    <img class="rec-card__img card-img-top" src="static/images/pornstar-martini.jpg" alt="#">
+                    <div class="rec-card__info card-body">
+                        <h5 class="rec-card__title">{{ tail.cocktail_name }}</h5>
                         <div class="row">
-                            <div class="rec-card_star-rating col-6">
+                            <div class="rec-card__star-rating col-6">
                                 {%  for i in range (0, tail.rating) %}
                                     <i class="fas fa-star"></i>
                                 {% endfor %}
                             </div>
-                            <div class="rec-card_col col-6">
-                                <a href="#" class="rec-card_cta cta">Make It</a>
+                            <div class="rec-card__col col-6">
+                                <a href="#" class="rec-card__cta cta">Make It</a>
                             </div>
                         </div>
                     </div>
@@ -45,8 +44,8 @@
                 {% endfor %}
             </div>
             <!-- If we need navigation buttons -->
-            <div class="rec-carsousel_swiper-button swiper-button-prev"></div>
-            <div class="rec-carsousel_swiper-button swiper-button-next"></div>
+            <div class="rec-carsousel__swiper-button swiper-button-prev"></div>
+            <div class="rec-carsousel__swiper-button swiper-button-next"></div>
         </div>
     </section>
 {% endblock %}
