--- a/templates/login.html
+++ b/templates/login.html
@@ -5,12 +5,12 @@
     <form id="login-form" class="form" action="#" target="_blank" method="post">
         <div class="row">
             <div class="col-12">
-                <label for="login-username" class="form_label">Username</label>
-                <input type="text" name="login-username" class="form_input" id="login-username" placeholder="examplebartender" maxlength="25" required>
+                <label for="login-username" class="form__label">Username</label>
+                <input type="text" name="login-username" class="form__input" id="login-username" placeholder="examplebartender" maxlength="12" required>
             </div>
             <div class="col-12">
-                <label for="login-password" class="form_label">Password</label>
-                <input type="passsword" name="login-password" class="form_input" id="login-password" placeholder="Type your passsword here" maxlength="25" required>
+                <label for="login-password" class="form__label">Password</label>
+                <input type="passsword" name="login-password" class="form__input" id="login-password" placeholder="Type your passsword here" maxlength="25" required>
             </div>
             <input type="submit" class="cta cta--form" id="login-submit" value="Login" aria-label="login button">
         </div>  
