Add icon to login page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,6 +223,12 @@ ul {
     clear: both;
 }
 
+.page-icon {
+    text-align: center;
+    font-size: 10rem;
+    color: var(--brand-color);
+}
+
 /*------------------------------------------------------Hero Image-- */
 .hero {
     width: 100%;
