--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <section class="center-page">
+    <div class="page-icon">
+        <i class="far fa-user-circle"></i>
+    </div>
     <h1 class="page-title">Login</h1>
     <form id="login-form" class="form" action="#" target="_blank" method="post">
         <div class="row">
