--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <section class="center-page">
+    <div class="page-icon">
+        <i class="far fa-edit"></i>
+    </div>
     <h1 class="page-title">Sign Up</h1>
     <h2 class="page-tagline center-text">Allows you to bookmark your favourite recipes and add your own.</h2>
     <form id="login-form" class="form" action="#" target="_blank" method="post">
