--- a/templates/home.html
+++ b/templates/home.html
@@ -24,6 +24,7 @@
                 <!-- Slides -->
                 {% for tail in cocktails %}
                 <div class="rec-card card swiper-slide">
+                    <i class="rec-card__bookmark far fa-bookmark"></i>
                     <img class="rec-card__img card-img-top" src="static/images/pornstar-martini.jpg" alt="#">
                     <div class="rec-card__info card-body">
                         <h5 class="rec-card__title">{{ tail.cocktail_name }}</h5>
