--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,7 @@
             </div>
         </div>
     </section>
+    <a href="{{ url_for('cocktail') }}" class="rec-card__cta cta">Make It</a>
     <section class="rec-carsousel">
         <div class="rec-carsousel__header">
             <h2 class="rec-carsousel__title inline-block">Newly Added</h2>
